@@ -32,10 +32,10 @@ import(RColorBrewer)
 import(S4Vectors)
 import(clisymbols)
 import(digest)
+import(fontawesome)
 import(grid)
 import(shiny)
 import(svglite)
-import(fontawesome)
 importFrom("grDevices", "dev.copy", "dev.interactive", "dev.new", "dev.off", "dev.size", "png")
 importFrom("grDevices", "dev.list")
 importFrom("grDevices", "pdf")
